# ECE143_LLM_Impact

./: .gitignore  README.md  main.py  pyproject.toml
data/: chatgpt_model_updates.csv  claude_model_updates.csv  gemini_model_updates.csv  grok_model_updates.csv  rmp_ucsd_professors.csv  sunset_data.csv
notebooks/: capes_plot.ipynb  department_analysis.ipynb  difficulty_covid_vs_llm.ipynb  import.ipynb  plot.ipynb  professor_analysis.ipynb  sentiment.ipynb  sub_hypothesis.ipynb  sunset_analysis.ipynb  sunset_plot.ipynb
notebooks/figures/: difficulty_effect_table.csv  merged_group_quarter_trends.csv
src/: __init__.py  capes_analysis.py  department_helpers.py  difficulty_analysis.py  merged_trend_analysis.py  plotting.py  professor_helpers.py  sentiment.py  sub_hypothesis_helpers.py  sunset_analysis.py  sunset_descriptive.py  sunset_plotting.py
tests/: test_plot.py  test_sentiment.py
