[project]
name = "ece143-llm-impact"
version = "0.1.0"
description = "Analyzing LLM release impacts on UCSD distributions and reviews"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.0",
]
